<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="453dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Título -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_green" />

        <!-- Campo de Nombre -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/full_name_hint" />

        <!-- Campo de DNI -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dni" />

        <EditText
            android:id="@+id/dniEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/dni_hint"
            android:inputType="number" />

        <!-- Campo de Contraseña -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <!-- Botón de Registro -->
        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary_green"
            android:text="@string/signup_button" />

    </LinearLayout>

</RelativeLayout>