<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_gray">

    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/logo_circular_background"
        android:padding="24dp"
        android:src="@drawable/ic_recycle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/splashAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name_full"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="@+id/splashLogo"
        app:layout_constraintStart_toStartOf="@+id/splashLogo"
        app:layout_constraintTop_toBottomOf="@+id/splashLogo" />

    <ProgressBar
        android:id="@+id/splashProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        android:progressDrawable="@drawable/splash_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/splashVersion"
        app:layout_constraintEnd_toEndOf="@+id/splashVersion"
        app:layout_constraintStart_toStartOf="@+id/splashVersion"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/splashVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/version_info"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>